--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 # About this {-}
 
-This is a book on using Quarto for writing and document preparation, aimed for scientists. It was initially developed as a 3 hour workshop, ["Rmarkdown for scientists"](https://rmd4sci.njtierney.com/). This focusses on Quarto, which is a next-generation rmarkdown. It is now developed into a resource that will grow and change over time as a **living book**.
+This is a book on using Quarto for writing and document preparation, aimed for scientists. It was initially developed as a half day workshop, ["Rmarkdown for scientists"](https://rmd4sci.njtierney.com/). This focusses on Quarto, which is a next-generation rmarkdown. It is now developed into a resource that will grow and change over time as a **living book**.
 
 This book aims to teach the following:
 
@@ -53,9 +53,9 @@ Good question. The answer is that writing this as a book provides a nice way to 
 
 ## How to use this book
 
-This book was written to provide course materials for a 3 hour course on Quarto
+This book was written to provide course materials for a half day course on Quarto
 
-We worked through the following sections in the book in 3 hours:
+We worked through the following sections in the book in a half day:
 
 - [why use Quarto](why-qmd)
 - [installation](installation)
